--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -29,8 +28,7 @@
         <activity android:name=".ui.RestaurantDetailActivity" />
         <activity
             android:name=".ui.LoginActivity"
-            android:label="Login/Signup"
-            android:screenOrientation="portrait"/>
+            android:label="Login/Signup"/>
     </application>
 
 </manifest>
